# FedMAP

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  simulation.py
config/: config.yaml
config/datasets/: office_31.yaml  synthetic.yaml
config/envs/: fedavg.yaml  fedbn.yaml  fedmap.yaml  fedprox.yaml  individual.yaml
config/task/: cprd.toml  eicu.toml  example.toml  interval.toml
datasets/: loader.py  synthetic_data_gen.py
datasets/example/: client_0_test.csv  client_0_train.csv  client_10_test.csv  client_10_train.csv  client_11_test.csv  client_11_train.csv  client_12_test.csv  client_12_train.csv  client_13_test.csv  client_13_train.csv  client_14_test.csv  client_14_train.csv  client_15_test.csv  client_15_train.csv  client_16_test.csv  client_16_train.csv  client_17_test.csv  client_17_train.csv  client_18_test.csv  client_18_train.csv  client_19_test.csv  client_19_train.csv  client_1_test.csv  client_1_train.csv  client_20_test.csv  client_20_train.csv  client_21_test.csv  client_21_train.csv  client_22_test.csv  client_22_train.csv  client_23_test.csv  client_23_train.csv  client_24_test.csv  client_24_train.csv  client_25_test.csv  client_25_train.csv  client_26_test.csv  client_26_train.csv  client_27_test.csv  client_27_train.csv  (+60 more)
models/: map_mlp.py
scripts/: run_t1.sh  run_t2.sh  run_t3.sh
src/: data_loader.py
src/client/: client_app.py
src/loss_modules/: map.py
src/models/: __init__.py  example_classifier.py  iron_classifier.py  map_cnn.py  map_mlp.py  multimodal_ffn.py
src/tasks/: __init__.py  (+4 more)
(+12 files in other folders)
