[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FedMAP"
version = "1.0.0"
description = "Personailised Federated Learning with MAP Priors"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.8.0, <2.0",
    "hydra-core==1.3.0",
    "numpy==2.2.6",
    "pandas==2.3.0",
    "scikit-learn==1.7.0",
    "pyarrow==16.1.0",
    "pycox==0.3.0",
    "torchtuples==0.2.2",
    "seaborn==0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Fan Zhang"

[tool.flwr.app.components]
serverapp = "src.server.server_app:app"
clientapp = "src.client.client_app:app"

[tool.flwr.app.config]
task-name = "interval"
num-server-rounds = 10
fraction-evaluate = 1
local-epochs = 5
learning-rate = 0.001
batch-size = 32
model= "DenseClassifier"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 20

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 20
options.backend.client-resources.num-cpus = 1 
options.backend.client-resources.num-gpus = 0.1 